Se agrego el apartado de wordparty realizado por fall, el html depende de bower por lo cual cree un sistema de template solo para el html del wordparty que carga todas sus dependencias desde worldparty.html la cual su base es basebower. Todo esto no funciona tira un error main.js:9 Uncaught ReferenceError: skel is not defined todos los static están correctos! recomiendo abrir branch nuevo para limpiar -- También se comenzo a realizar el sistema de admin el mismo cuelga de core/admin

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
 # hackmadrid gitignore
 cfpb/core/static/core/images/
 core/static/core/images/
+core/static/core/bower
+
 *.png
 *.jpg
+manage.py
 # OS X
 # General
 .DS_Store
